# Snake

./: CMakeLists.txt  colors.h  config.txt  draw.c  draw.h  file.c  file.h  game.c  game.h  initSnake.c  initSnake.h  main.c  scores.txt  structs.h  time.c  time.h
cmake_modules/: FindSDL2.cmake
